--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-plugin-ember-template-compilation": "^2.4.1",
     "concurrently": "^9.1.2",
     "decorator-transforms": "^2.3.0",
-    "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/canary/shas/6cf7c2d72b2b8d29dbead002c3d0d4a6ce14fe90.tgz",
+    "ember-source": "link:ember-source",
     "prettier": "^3.5.3",
     "prettier-plugin-ember-template-tag": "^2.0.5",
     "vite": "^6.3.5"
